# AdventOfCode2021

./: .gitignore  02.1.c  03.1.c  03.2.c  04.2.c  06.1.c  08.1.c  08.2.c  10.1.c  11.2.c  CMakeLists.txt  readme.md
01/1/: main.c
01/2/: main.c
02/1/: main.c
02/2/: main.c
03/1/: main.c
03/2/: main.c
04/: input.txt
04/1/: main.c
04/2/: main.c
05/: input.txt
05/1/: main.c
05/2/: main.c
06/1/: main.c
07/1/: main.c
07/2/: main.c
08/: input.txt  testInput.txt
08/1/: main.c
09/1/: main.c
inputs/: 03.txt  11.txt  11test.txt  12output3.txt  13.txt  14.txt  14test.txt
src/: 01.1.c  01.2.c  02.1.c  02.2.c  03.1.c  03.2.c  04.1.c  04.2.c  05.1.c  05.2.c  06.1.c  06.2.c  07.1.c  07.2.c  08.1.c  08.2.c  09.1.c  09.2.c  10.1.c  10.2.c  11.1.c  11.2.c  12.1.c  12.2.c  13.1.c  13.2.c  14.1.c  14.2.c  util.c
