cmake_minimum_required(VERSION 3.21)
project(AdventOfCode VERSION 9)

set(CMAKE_C_STANDARD 99)

add_executable(Day01.1 01.1.c)
add_executable(Day01.2 01.2.c)

add_executable(Day02.1 02.1.c)
add_executable(Day02.2 02.2.c)

add_executable(Day03.1 03.1.c)
add_executable(Day03.2 03.2.c)

add_executable(Day04.1 04.1.c)
add_executable(Day04.2 04.2.c)

add_executable(Day05.1 05.1.c)
add_executable(Day05.2 05.2.c)

add_executable(Day06.1 06.1.c)
#add_executable(Day06.2 06.2.c)

add_executable(Day07.1 07.1.c)
add_executable(Day07.2 07.2.c)

add_executable(Day08.1 08.1.c)
#add_executable(Day08.2 08.2.c)

add_executable(Day09.1 09.1.c)
add_executable(Day09.2 09.2.c)

add_executable(Day10.1 10.1.c)
add_executable(Day10.2 10.2.c)

add_executable(Day11.1 11.1.c)
add_executable(Day11.2 11.2.c)