cmake_minimum_required(VERSION 3.21)
project(AdventOfCode VERSION 9)

set(CMAKE_C_STANDARD 99)

add_executable(Day17.2 src/17.2.c)
add_executable(Day17.1 src/17.1.c)

#add_executable(Day15.1 src/15.1.c)

add_executable(Day14.2 src/14.2.c)
add_executable(Day14.1 src/14.1.c)

add_executable(Day13.2 src/13.2.c)
add_executable(Day13.1 src/13.1.c)

add_executable(Day12.2 src/12.2.c)
add_executable(Day12.1 src/12.1.c)

add_executable(Day11.2 src/11.2.c)
add_executable(Day11.1 src/11.1.c)

add_executable(Day10.2 src/10.2.c)
add_executable(Day10.1 src/10.1.c)

add_executable(Day09.2 src/09.2.c)
add_executable(Day09.1 src/09.1.c)

add_executable(Day08.2 src/08.2.c)
add_executable(Day08.1 src/08.1.c)

add_executable(Day07.2 src/07.2.c)
add_executable(Day07.1 src/07.1.c)

#add_executable(Day06.2 src/06.2.c)
add_executable(Day06.1 src/06.1.c)

add_executable(Day05.2 src/05.2.c)
add_executable(Day05.1 src/05.1.c)

add_executable(Day04.2 src/04.2.c)
add_executable(Day04.1 src/04.1.c)

add_executable(Day03.2 src/03.2.c)
add_executable(Day03.1 src/03.1.c)

add_executable(Day02.2 src/02.2.c)
add_executable(Day02.1 src/02.1.c)

add_executable(Day01.2 src/01.2.c)
add_executable(Day01.1 src/01.1.c)